--- a/yssl/res/drawable/skyblue_platform_list_item.xml
+++ b/yssl/res/drawable/skyblue_platform_list_item.xml
@@ -4,7 +4,7 @@
         android:color="@android:color/transparent"
         />
     <stroke
-        android:width="1dp"
+        android:width="1px"
         android:color="#7fcccccc"
         />
 </shape>
