--- a/yssl/res/drawable/skyblue_platform_list_item_selected.xml
+++ b/yssl/res/drawable/skyblue_platform_list_item_selected.xml
@@ -4,7 +4,7 @@
         android:color="#78ffffff"
         />
     <stroke
-        android:width="1dp"
+        android:width="1px"
         android:color="#cccccc"
         />
 </shape>
