--- a/yssl/res/layout/fragment_collect.xml
+++ b/yssl/res/layout/fragment_collect.xml
@@ -3,16 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <com.strod.yssl.view.swipelistview.SwipeListView
-            android:id="@+id/swipe_list_view"
-            android:listSelector="#00000000"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:divider="@color/divider_color"
-            android:overScrollMode="never"
-            />
+        android:id="@+id/swipe_list_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:divider="@color/divider_color"
+        android:dividerHeight="1px"
+        android:listSelector="#00000000"
+        android:overScrollMode="never" />
 
-    
+
 </LinearLayout>
