--- a/yssl/res/values/ssdk_strings.xml
+++ b/yssl/res/values/ssdk_strings.xml
@@ -16,7 +16,9 @@
     <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
     <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
     <string name="alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
-    
+
+	<string name="qq_login">腾讯QQ</string>
+	<string name="wechat_login">微信</string>
 	<string name="sinaweibo">新浪微博</string>
 	<string name="tencentweibo">腾讯微博</string>
 	<string name="qzone">QQ空间</string>
