--- a/yssl/res/layout/fragment_collect.xml
+++ b/yssl/res/layout/fragment_collect.xml
@@ -5,7 +5,16 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <com.strod.yssl.view.swipelistview.SwipeListView
+    <!--<com.strod.yssl.view.swipelistview.SwipeListView
+        android:id="@+id/swipe_list_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:divider="@color/divider_color"
+        android:dividerHeight="1px"
+        android:listSelector="#00000000"
+        android:overScrollMode="never" />-->
+
+    <com.strod.yssl.view.swipemenulistview.SwipeMenuListView
         android:id="@+id/swipe_list_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
